--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,7 @@
         <div class="fade-in">
         <section>
             <p>Email : <a href="mailto:quentin.bucher.pro@gmail.com">quentin.bucher.pro@gmail.com</a></p>
-            <h2>LinkedIn</h2>
-            <p><a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil LinkedIn</a></p>
+            <p>LinkedIn : <a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil</a></p>
         </section>
     </div>
     <div class="fade-in">
