--- a/index.html
+++ b/index.html
@@ -137,7 +137,18 @@
                     </div>
                     <div class="formation-detail">
                         Mastère Architecte Web<br>
-                        Institut F2I - Vincennes
+                        Institut F2I - Vincennes<br>
+                        Diplôme de niveau Bac +5, spécialisé dans la conception et le développement d'applications web.
+                    </div>
+
+                    <div class="formation-summary">
+                        2022 : Echec Bachelor 3e année - Mobilité et Objets Connectés, Informatique
+                    </div>
+                    <div class="formation-detail">
+                        Echec Bachelor 3e année<br>
+                        Spécialisation Mobilité et Objets Connectés, Informatique<br>
+                        ESGI - Paris<br>
+                        Cycle Bachelor de 3e année, axé sur le développement de solutions logicielles et d'applications métiers. Bien que je n'aie pas obtenu le diplôme, j'ai acquis de nombreuses compétences en programmation, gestion de projets informatiques et maintenance des systèmes d’information.
                     </div>
 
                     <div class="formation-summary">
@@ -146,7 +157,8 @@
                     <div class="formation-detail">
                         BTS SIO (Services Informatiques aux Organisations)<br>
                         Option SLAM (Solutions Logicielles et Applications Métiers)<br>
-                        lycée Saint Gabriel - Bagneux
+                        lycée Saint Gabriel - Bagneux<br>
+                        Diplôme de niveau Bac +2, axé sur le développement de solutions logicielles et d'applications métiers. Formation pratique en programmation, gestion de projets informatiques et maintenance des systèmes d’information.
                     </div>
 
                     <div class="formation-summary">
@@ -155,7 +167,8 @@
                     <div class="formation-detail">
                         Baccalauréat STI2D (Sciences et Technologies de l'Industrie et du Développement Durable)<br>
                         Spécialité EE (Énergie et Environnement)<br>
-                        lycée Vilgénis - Massy
+                        lycée Vilgénis - Massy<br>
+                        Diplôme de niveau Bac, mettant l'accent sur les innovations technologiques liées à l'énergie et à l'environnement.
                     </div>
 
                     <div class="formation-summary">
@@ -175,7 +188,7 @@
 
 
                     <div class="formation-summary">
-                        2015 : obtention du brevet des collèges
+                        2015 : Brevet des collèges
                     </div>
                     <div class="formation-detail">
                         Diplôme national du brevet des collèges<br>
