--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="fade-in">
                 <section>
                     <div class="section-title">
-                        <h2>À PROPOS DE MOI</h2>
+                        <h2>À PROPOS</h2>
                     </div>
                     <div class="content-section">
                         &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d'architecte web à l'Institut F2I en 2024, je suis passionné par le développement web et mobile. Je suis actuellement en recherche d'un poste de développeur en région parisienne, prêt à m'engager dans des projets innovants pour lancer ma carrière professionnelle. Fort de mes expériences en entreprise et de mes compétences techniques variées, je suis motivé à contribuer au succès d'une équipe dynamique.
@@ -223,9 +223,9 @@
                                 
                                 Podcasts sur la géopolitique<br>
 
-                                Jeux vidéo<br>
+                                Jeux vidéos<br>
 
-                                Sport colectif<br>
+                                Sport collectif<br>
 
                                 Coding game<br>
 
