maj des lien du projet thé tip top jeu concours

--- a/projects.html
+++ b/projects.html
@@ -70,8 +70,8 @@
             </div>
             <p>Liens :</p>
             <ul>
-                <li><a href="https://dsp5-archi-o22a-4-5-g1.fr/" target="_blank">Version Démo</a></li>
-                <li><a href="https://github.com/quentinbucher/the-tip-top" target="_blank">Code source sur GitHub</a></li>
+                <li><a href="https://671b9fe5e84efc321d8da117--thetiptop-jeu-concours.netlify.app/" target="_blank">Version Démo</a></li>
+                <li><a href="https://github.com/quvntvn/thetiptop-demo" target="_blank">Code source sur GitHub</a></li>
             </ul>
         </section>
     </div>   
