--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                         <p>Français : Langue natale<br>
                             
-                            Anglais : Niveau B2</p>
+                            Anglais : Lu, écrit, parlé</p>
                         </section>
                     </div>
                     <div class="fade-in">
