--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
 
                     <div class="formation-summary">
-                        2022 : Echec Bachelor 3e année - Mobilité et Objets Connectés, Informatique
+                        2022 : Bachelor 3e année - Mobilité et Objets Connectés, Informatique
                     </div>
                     <div class="formation-detail">
                         Echec Bachelor 3e année<br>
