--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <div class="section-title">
                         <h2>LANGAGES INFORMATIQUES ÉTUDIÉS</h2>
                     </div>
-                        <p>HTML5, PHP, CSS, C#, C++, C,  SQL Serveur, Python, Java, JavaScript, Kotlin, Swift, NodeJs, Flutter, Kotlin</p>
+                        <p>HTML5, PHP, CSS, C#, C++, C,  SQL Serveur, Python, Java, JavaScript, Kotlin, Swift, NodeJs, Flutter</p>
                     </section>
                     </div>
                     <div class="fade-in">
