maj formation cobol

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="section-title">
                     <h1>QUENTIN BUCHER</h1>
                 </div>
-                    <p>Développeur web et mobile</p>
+                    <p>Concepteur Développeur - Mainframe</p>
                     <div class="cv-download">
                         <a href="Quentin_Bucher_CV.pdf" download="Quentin_Bucher_CV" class="download-button">Télécharger mon CV</a>
                     </div>
@@ -37,14 +37,14 @@
                 </header>
             </div>
                 <div class="fade-in">
-                <section>
-                    <div class="section-title">
-                        <h2>À PROPOS</h2>
-                    </div>
-                    <div class="content-section">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d'architecte web à l'Institut F2I en 2024, je suis passionné par le développement web et mobile. Je suis actuellement en recherche d'un poste de développeur en région parisienne, prêt à m'engager dans des projets innovants pour lancer ma carrière professionnelle. Fort de mes expériences en entreprise et de mes compétences techniques variées, je suis motivé à contribuer au succès d'une équipe dynamique.
-                    </div>
-                </section>  
+                    <section>
+                        <div class="section-title">
+                            <h2>À PROPOS</h2>
+                        </div>
+                        <div class="content-section">
+                            &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d'un Mastère Architecte Web à l'Institut F2I en 2024, j'ai récemment complété une formation en développement Mainframe et COBOL. Passionné par les environnements critiques et les systèmes d'information robustes, je me spécialise dans la modernisation et la maintenance d’applications legacy sur z/OS. Mon objectif est d'intégrer une équipe dynamique en tant que Développeur COBOL afin de contribuer à la gestion et à l'évolution des systèmes Mainframe des grandes entreprises. 
+                        </div>
+                    </section>
             </div>   
             <div class="fade-in">         
                 <section id="experiences">
@@ -249,14 +249,14 @@
                 </section>
             </div>            
             <div class="fade-in">
-                    <section>
-                        <div class="section-title">
+                <section>
+                    <div class="section-title">
                         <h2>LANGAGES INFORMATIQUES ÉTUDIÉS</h2>
                     </div>
-                        <p>HTML5, PHP, CSS, C#, C++, C,  SQL Serveur, Python, Java, JavaScript, Kotlin, Swift, NodeJs, Flutter</p>
-                    </section>
-                    </div>
-                    <div class="fade-in">
+                    <p>COBOL, HTML5, PHP, CSS, C#, C++, C, SQL Server, Python, Java, JavaScript, Kotlin, Swift, Node.js, Flutter</p>
+                </section>
+            </div>            
+            <div class="fade-in">
                     <section>
                         <div class="section-title">
                         <h2>LANGUES</h2>
