Ajout d'un projet de coaching sportif

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,18 @@
         </section>
     </div>   
     <div class="fade-in">
+        <section>
+            <div class="section-title">
+                <h2>Site Coaching Sportif</h2>
+            </div>
+            <p>Site vitrine réalisé pour une amie coach de musculation présentant ses services et permettant de prendre contact.</p>
+            <p>Liens :</p>
+            <ul>
+                <li><a href="https://alize-waron.netlify.app/" target="_blank">Voir le site</a></li>
+            </ul>
+        </section>
+    </div>
+    <div class="fade-in">
 
         <section>
             <div class="section-title">
