Améliore la description du projet de coaching

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,11 @@
             <div class="section-title">
                 <h2>Site Coaching Sportif</h2>
             </div>
-            <p>Site vitrine réalisé pour une amie coach de musculation présentant ses services et permettant de prendre contact.</p>
+            <p><strong>Site Coaching Sportif</strong> est un site vitrine que j'ai réalisé pour une amie coach de musculation. Il présente ses offres d'entraînement et permet aux visiteurs de la contacter pour réserver une séance personnalisée.</p>
+            <p>Voici un aperçu du site :</p>
+            <div class="screen-image-landscape">
+                <img src="/assets/images/site-coaching.png" alt="Capture d'écran du site de coaching sportif">
+            </div>
             <p>Liens :</p>
             <ul>
                 <li><a href="https://alize-waron.netlify.app/" target="_blank">Voir le site</a></li>
