ajout projet coach alizee

--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,7 @@
         <section>
             <div class="section-title">
                 <h2>Site Coaching Sportif</h2>
+            </div>
             <p><strong>Site Coaching Sportif</strong> est un site vitrine que j'ai réalisé pour une amie coach de musculation. Il présente ses offres d'entraînement et permet aux visiteurs de la contacter pour réserver une séance personnalisée.</p>
             <p>Voici un aperçu du site :</p>
             <div class="screen-image-landscape">
