--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
             <p>Voici un aperçu de l'application :</p>
             <div class="screen-image">
-            <img src="/assets/images/qotdandroid.webp" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
+            <img src="/assets/images/qotdandroid.jpg" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
         </div>
             <p>Tester les requêtes API :</p>
             <button onclick="fetchQuote('random')">Citation aléatoire</button>
@@ -47,7 +47,7 @@
             <p>Liens :</p>
             <ul>
                 <li><a href="https://quvntvn-qotd-website.netlify.app/" target="_blank">Version Web</a></li>
-                <li><a href="https://github.com/quvntvn/qotd_app/releases/tag/v1.0.0" target="_blank">Application sur Android</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.quvntvn.qotd_app" target="_blank">Application sur Android</a></li>
             </ul>
         </section>
     </div>
