--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             <div class="section-title">
                 <h2>CITATION DU JOUR</h2>
             </div>
-            <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
+            <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Render pour récupérer les citations.</p>
             <p>Voici un aperçu de l'application :</p>
             <div class="screen-image">
             <img src="/assets/images/qotdandroid.jpg" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
