--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                             <h2>À PROPOS</h2>
                         </div>
                         <div class="content-section">
-                            &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d'un Mastère Architecte Web à l'Institut F2I en 2024, j'ai récemment complété une formation en développement Mainframe et COBOL. Passionné par les environnements critiques et les systèmes d'information robustes, je me spécialise dans la modernisation et la maintenance d’applications legacy sur z/OS. Mon objectif est d'intégrer une équipe dynamique en tant que Développeur COBOL afin de contribuer à la gestion et à l'évolution des systèmes Mainframe des grandes entreprises. 
+                            &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d’un Mastère Architecte Web en 2024 et formé au développement Mainframe/COBOL, j’ai réalisé ma première mission chez Euro-Information où j’ai rapidement été opérationnel sur la création et l’évolution de traitements batch sous z/OS.<br>
+                            &emsp;&emsp;&emsp;&emsp;&emsp;Junior mais déjà productif, j’interviens sur la maintenance, l’analyse d’impacts, la rédaction de spécifications et la mise à jour de programmes COBOL/DB2/IMS dans des environnements critiques.<br>
+                            &emsp;&emsp;&emsp;&emsp;&emsp;Motivé, adaptable et à l’aise sur les systèmes legacy, je souhaite poursuivre mon évolution au sein d’une équipe Mainframe où je pourrai continuer à monter en compétence tout en apportant une contribution concrète aux projets.    
                         </div>
                     </section>
             </div>   
@@ -53,6 +55,24 @@
                     <button class="toggle-detail">&#9660;</button>
                 </div>
                     <div class="experience">
+                        <div class="experience-summary">
+                            Septembre 2025 - En cours : Développeur Cobol chez Astek (Mission Euro-Information)
+                        </div>
+
+                        <div class="experience-detail">
+                            Entreprise : Astek — Mission chez Euro Information<br>
+                            Durée : 3 mois<br>
+                            Mission :
+                            <ul>
+                                <li>Participation au développement et à la maintenance des applications Mainframe du programme SALT (assurances affinitaires)</li>
+                                <li>Création, mise à jour et documentation de traitements batch (COBOL/DB2/IMS) pour le ciblage, l’extraction, la suppression et la restitution de données</li>
+                                <li>Mise en conformité RGPD des traitements et données manipulées</li>
+                                <li>Rédaction de cartographies techniques détaillées des programmes</li>
+                                <li>Rédaction de spécifications fonctionnelles pour l’évolution des traitements</li>
+                                <li>Contribution aux batchs de gestion de contrats : analyse d’impacts, correction d’anomalies, évolution de programmes existants</li>
+                            </ul>
+                            Technologie : COBOL, JCL, DB2, IMS, z/OS<br>
+                        </div>
                         <div class="experience-summary">
                             2022-2024 : Développeur Alternant chez Cloud 42
                         </div>
