--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
                                 Jeux vidéos<br>
 
-                                Sport collectif<br>
+                                Boxe<br>
 
                                 Coding game<br>
 
