--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             <div class="screen-image">
             <img src="/assets/images/qotdandroid.jpg" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
         </div>
-            <p>Tester les requêtes API :</p>
+            <p>Tester les requêtes API (désactivé pour le moment) :</p>
             <button onclick="fetchQuote('random')">Citation aléatoire</button>
             <button onclick="fetchQuote('daily')">Citation du jour</button>
             <div id="loadingIndicator" style="display: none;"><br>Chargement...<br><br></div>
@@ -46,7 +46,7 @@
             <br><br>
             <p>Liens :</p>
             <ul>
-                <li><a href="https://quvntvn-qotd-website.netlify.app/" target="_blank">Version Web</a></li>
+                <li><a href="https://qotd-website-v2.netlify.app/" target="_blank">Version Web</a></li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.quvntvn.qotd_app" target="_blank">Application sur Android</a></li>
             </ul>
         </section>
