--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             Durée : 2 ans<br>
                             Mission : Développement d'une plateforme de vente de licence de logiciel en ligne <br>
                             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Développement d'un site vitrine via wordpress <br>
-                            Technologie : PHP, HTML, CSS, SQL, Wordpress <br>
+                            Technologie : C#, HTML, CSS, SQL, Wordpress <br>
                         </div>
                         <div class="experience-summary">
                             Novembre 2021-Août 2022 : Développeur Alternant chez Re-Saclay<br>
