--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                     <div class="experience">
                         <div class="experience-summary">
-                            Septembre 2025 - En cours : Développeur Cobol chez Astek (Mission Euro-Information)
+                            Septembre 2025 - Décembre 2025 : Développeur Cobol chez Astek (Mission Euro-Information/Site Wordpress)
                         </div>
 
                         <div class="experience-detail">
@@ -71,7 +71,18 @@
                                 <li>Rédaction de spécifications fonctionnelles pour l’évolution des traitements</li>
                                 <li>Contribution aux batchs de gestion de contrats : analyse d’impacts, correction d’anomalies, évolution de programmes existants</li>
                             </ul>
-                            Technologie : COBOL, JCL, DB2, IMS, z/OS<br>
+                            Technologie : COBOL, JCL, DB2, IMS, z/OS<br><br>
+                            Entreprise : Astek — Mission en interne pour l'association agir ensemble contre les VSS<br>
+                            Durée : 2 semaines<br>
+                            Mission :
+                            <ul>
+                                <li>Création de Composants WordPress</li>
+                                <li>Création des pages Grâce aux Composants créés</li>
+                                <li>Proposition de design</li>
+                                <li>Tests des fonctionnalités</li>
+                            </ul>
+                            Technologie : Wordpress, JavaScript, CSS<br>
+                            site : <a href="https://agirensemblecontrelesvss.com/" target="_blank" rel="noopener noreferrer">agirensemblecontrelesvss</a>
                         </div>
                         <div class="experience-summary">
                             2022-2024 : Développeur Alternant chez Cloud 42
