--- a/projects.html
+++ b/projects.html
@@ -25,32 +25,52 @@
             <p>Quelques projets que j'ai réalisé sur mon temps libre.</p>
         </div>
         </header>
-        <div class="fade-in">
-        <section>
-            <div class="section-title">
-                <h2>CITATION DU JOUR</h2>
-            </div>
-            <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Render pour récupérer les citations.</p>
-            <p>Voici un aperçu de l'application :</p>
-            <div class="screen-image">
-            <img src="/assets/images/qotdandroid.jpg" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
+                <div class="fade-in">
+            <section>
+                <div class="section-title">
+                    <h2>CAR LOCATOR</h2>
+                </div>
+                <p><strong>Car Locator</strong> détecte automatiquement la déconnexion Bluetooth avec votre voiture, enregistre votre emplacement de stationnement sans que vous n’ayez rien à faire, et vous guide pour retrouver votre voiture plus tard.</p>
+                <p>Voici un aperçu de l'application :</p>
+                <div class="screen-image">
+                    <img src="/assets/images/carlocator.jpg" alt="Capture d'écran de l'application car locator" style="width:50%;max-width:300px;">
+                </div>
+
+
+
+                <br><br>
+                <p>Liens :</p>
+                <ul>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.quvntvn.carlocator" target="_blank">Application sur Android</a></li>
+                </ul>
+            </section>
         </div>
-            <p>Tester les requêtes API (désactivé pour le moment) :</p>
-            <button onclick="fetchQuote('random')">Citation aléatoire</button>
-            <button onclick="fetchQuote('daily')">Citation du jour</button>
-            <div id="loadingIndicator" style="display: none;"><br>Chargement...<br><br></div>
-            <pre id="apiResult" class="apiDisplay"></pre>
-            <button onclick="masquer()" class="hideButton" id="hide">Masquer</button>
+        <div class="fade-in">
+            <section>
+                <div class="section-title">
+                    <h2>CITATION DU JOUR</h2>
+                </div>
+                <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Render pour récupérer les citations.</p>
+                <p>Voici un aperçu de l'application :</p>
+                <div class="screen-image">
+                    <img src="/assets/images/qotdandroid.jpg" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
+                </div>
+                <p>Tester les requêtes API (désactivé pour le moment) :</p>
+                <button onclick="fetchQuote('random')">Citation aléatoire</button>
+                <button onclick="fetchQuote('daily')">Citation du jour</button>
+                <div id="loadingIndicator" style="display: none;"><br>Chargement...<br><br></div>
+                <pre id="apiResult" class="apiDisplay"></pre>
+                <button onclick="masquer()" class="hideButton" id="hide">Masquer</button>
 
 
-            <br><br>
-            <p>Liens :</p>
-            <ul>
-                <li><a href="https://qotd-website-v2.netlify.app/" target="_blank">Version Web</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.quvntvn.qotd_app" target="_blank">Application sur Android</a></li>
-            </ul>
-        </section>
-    </div>
+                <br><br>
+                <p>Liens :</p>
+                <ul>
+                    <li><a href="https://qotd-website-v2.netlify.app/" target="_blank">Version Web</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.quvntvn.qotd_app" target="_blank">Application sur Android</a></li>
+                </ul>
+            </section>
+        </div>
     <div class="fade-in">
         <section>
             <div class="section-title">
