--- a/hobbies.html
+++ b/hobbies.html
@@ -62,48 +62,32 @@
         </section>
     </div>
     <div class="fade-in">
-        <section id="clicker-game">
+        <section id="emoji-war-game">
             <div class="section-title">
-                <h2>Jeu d'incrémentation</h2>
+                <h2>EMOJI WAR</h2>
             </div>
-            <div id="moneyDisplay">Solde disponible :<br><br> 0 €</div>
-            <button id="salaire">salaire</button>
-            <button class="upgrade-salaire" id="salaireUpgrade" >Augmenter (Coût : 75 000 €)</button>
-            <div id="salairebyClick">1 000 € par click</div>
-            
-            <h3>ENTREPRISES</h3>
-            <div id="businesses">
-                <div>
-                    <div id="epiceRevenueDisplay"></div>
-                    <button id="epice">Épicerie (Coût : 100 000 €)</button>
-                    <button id="epiceUpgrade" >Améliorer (Coût : 100 000 €)</button>
+
+            <div class="game-window">
+                <div class="game-bar">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="game-title">emoji-war.netlify.app</span>
+                    <a href="https://emoji-war.netlify.app/" target="_blank" class="open-btn">
+                        Ouvrir ↗
+                    </a>
                 </div>
-                <div>
-                    <div id="usineRevenueDisplay"></div>
-                    <button id="usine">Usine de textile (Coût : 10 000 000 €)</button>
-                    <button id="usineUpgrade" >Améliorer (Coût : 10 000 000 €)</button>
-                </div>
-                <div>
-                    <div id="centreRevenueDisplay"></div>
-                    <button id="centre">Centre-commercial (Coût : 100 000 000 €)</button>
-                    <button id="centreUpgrade" >Améliorer (Coût : 100 000 000 €)</button>
-                </div>
-                <div>
-                    <div id="clubRevenueDisplay"></div>
-                    <button id="club">Club de football (Coût : 1 000 000 000 €)</button>
-                    <button id="clubUpgrade" >Améliorer (Coût : 1 000 000 000 €)</button>
-                </div>
-                <div>
-                    <button id="terre">planète terre (Coût : 1 000 000 000 000 €)</button>
-                    <br>
-                    <br>
-                    <div id="victory"></div>
-                    <br>
-                    <br>
-                </div>
+
+                <iframe 
+                    src="https://emoji-war.netlify.app/" 
+                    title="Emoji War Game"
+                    loading="lazy"
+                    allowfullscreen>
+                </iframe>
             </div>
         </section>
     </div>
+
     <div class="fade-in">
         <section id="metabolism">
             <div class="section-title">
