--- a/hobbies.html
+++ b/hobbies.html
@@ -32,6 +32,7 @@
         <div class="section-title">
             <h2>EMOJI WAR</h2>
         </div>
+        <p>Un jeu d'incrémentation avec des emojis</p>
 
         <div class="game-window">
             <div class="game-bar">
